# tenderAI

./: .gitignore  LICENSE  README.md  TenderAI.sln
.aspire/: settings.json
.sonarqube/conf/: Sonar-cs-none.ruleset  Sonar-cs.ruleset  Sonar-vbnet-none.ruleset  Sonar-vbnet.ruleset  SonarQubeAnalysisConfig.xml
ProjectDoc/: Gem Instruction.txt  Project Specification_ TenderAI.docx
TenderAI.ApiService/: Program.cs  TenderAI.ApiService.csproj  TenderAI.ApiService.http  appsettings.json
TenderAI.ApiService/Contracts/: TenderUploaded.cs
TenderAI.ApiService/Data/: TenderDBContext.cs  TenderDBContextFactory .cs
TenderAI.ApiService/Features/: SubmitRfpEndPoint.cs
TenderAI.ApiService/Hubs/: DocumentHub.cs
TenderAI.ApiService/Migrations/: 20260313130017_InitialCreate.Designer.cs  20260313130017_InitialCreate.cs  20260317105406_InitialCreate.Designer.cs  20260317105406_InitialCreate.cs  20260318065814_InitialCreate.Designer.cs  TenderDBContextModelSnapshot.cs
TenderAI.ApiService/Services/: FakeFileUploader.cs  IAddChatDataBaseService.cs  IfileUploader.cs  MinioStorageService.cs  (+2 more)
TenderAI.AppHost/: AppHost copy.cs.old  AppHost.cs  TenderAI.AppHost.csproj  appsettings.json
TenderAI.PythonService/: .env.old  Dockerfile  RAGService.py  agent_service.py  ai_service.py  api.py  main.py  memory_db.py  pyproject.toml
TenderAI.PythonService/downloads/: Founding_Member_Agreement_Nitin_Signed_summary.txt  Solar-System-GK-Notes-in-PDF_summary.txt
TenderAI.Web/: index.html  package-lock.json  package.json  vite.config.ts
qdrant_storage/: raft_state.json
(+23 files in other folders)
