[project]
name = "tenderai-pythonservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "fastembed>=0.7.4",
    "google-generativeai>=0.8.6",
    "langchain-core>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.9",
    "minio>=7.2.20",
    "openai>=2.15.0",
    "pika>=1.3.2",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "uvicorn>=0.41.0",
]
